# afsi

./: .gitignore  DFG-2D-3-benchmark.h5  DFG-2D-3-benchmark.xdmf  activate_fenicsx  original.py  readme.md
afsic/: CMakeLists.txt  README.md  pyproject.toml
afsic/demo/demo_2000/: fsi_paralell.py  local_mesh.py  ns.py  readme.md  structral_force.py
afsic/demo/demo_336/: fsi.py  fsi_paralell.py  local_mesh.py  ns.py  readme.md
afsic/demo/demo_337/: Guccione.py  HolzapfelOgden.py  NeoHookean.py  PressureEndo.py  ReadFibers.py  fsi_paralell.py  fsi_paralell_fibers.py  fsi_paralell_fibers_contraction.py  fsi_paralell_fibers_contraction_timing.py  read_mesh.py  readme.md  test_fibers.py
afsic/demo/demo_337/data/: diastole-afsi.txt  ideal_middle_wall.txt
afsic/demo/demo_337/mesh/: f0.txt  generate_mesh.py  s0.txt
afsic/demo/demo_337/plot/: 64x64x64.csv  a.py  bench-ilv-contraction.py  bench-ilv-inflation.py  docker-compose.yml  (+8 more)
afsic/demo/demo_340/: FRH.py  NeoHookean.py  fsi_paralell.py  generate_mesh-0.py  generate_mesh-1.py  readme.md
afsic/demo/demo_341/: fsi_paralell.py  generate_mesh.py  ns.py
afsic/demo/demo_343/: fsi_paralell.py  generate_mesh.py  readme.md
afsic/src/: afsic_ext.cpp
afsic/src/afsic/: __init__.py
afsic/src/coupling/: CMakeLists.txt  IBMesh3D.h  a.h  main.cpp  main.h
afsic/src/coupling/src/: IBInterpolation.h  IBMesh.h
afsic/src/mail/: CMakeLists.txt  main.cpp  smtp_mail_sender.cpp
afsic/tests/: test_basic.py  test_coupling_2D.py  test_coupling_3D.py
afsic/tests/checkpoint/: write_function.py  write_mesh.py
afsic/tests/tbb/: a.cpp  a.out
install/: activate_dolfinx  docker-compose.yml  install_dolfinx.sh  install_env.sh
mail/: CMakeLists.txt  main.cpp  smtp_mail_sender.h
(+34 files in other folders)
